add missing node

--- a/spiral/templates/default/logback.properties.erb
+++ b/spiral/templates/default/logback.properties.erb
@@ -1,2 +1,2 @@
-PM_LEVEL=<%= ['spiral']['lobby']['log_level']['pm'] %>
-ROOT_LEVEL=<%= ['spiral']['lobby']['log_level']['root'] %>
+PM_LEVEL=<%= node['spiral']['lobby']['log_level']['pm'] %>
+ROOT_LEVEL=<%= node['spiral']['lobby']['log_level']['root'] %>
