update settings by Lee Li's input

--- a/pokermahjong/templates/default/facebook_staging/servercore/application.properties.erb
+++ b/pokermahjong/templates/default/facebook_staging/servercore/application.properties.erb
@@ -5,8 +5,8 @@ cashCheckPort=8080
 debitContext=/api/ms/debit
 creditContext=/api/ms/credit
 cashCheckContext=/api/ms/getbalance
-cash.merch_id=mahjong_sns
-cash.merch_pwd=0D3CD138-46FB-4DCC-84F5-7E3EF4DE5D93
+cash.merch_id=mahjong
+cash.merch_pwd=0a55d231-97ce-4969-88bc-cababff91421
 
 amq.url=tcp://amq1.localdomain:61616
 
