use rds ip instead of host entry in configurations

--- a/pokermahjong/templates/default/facebook_staging/httpserver/application.properties.erb
+++ b/pokermahjong/templates/default/facebook_staging/httpserver/application.properties.erb
@@ -1,10 +1,10 @@
 master.jdbc.driverClass=com.mysql.jdbc.Driver
-master.jdbc.url=jdbc:mysql://rds1.localdomain:3306/alex_pmahjong
+master.jdbc.url=jdbc:mysql://<%= Resolv.getaddress(node[:opsworks][:stack][:rds_instances].first[:address]) %>:3306/alex_pmahjong
 master.jdbc.username=apmahjong
 master.jdbc.password=aza6osli
 
 slave.jdbc.driverClass=com.mysql.jdbc.Driver
-slave.jdbc.url=jdbc:mysql://rds1.localdomain:3306/alex_pmahjong
+slave.jdbc.url=jdbc:mysql://<%= Resolv.getaddress(node[:opsworks][:stack][:rds_instances].first[:address]) %>:3306/alex_pmahjong
 slave.jdbc.username=apmahjong
 slave.jdbc.password=aza6osli
 
