move logback.xml to template and use log_path

--- a/pokermahjong/templates/default/facebook_staging/httpserver/logback.xml.erb
+++ b/pokermahjong/templates/default/facebook_staging/httpserver/logback.xml.erb
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-	<property name="LOG_HOME" value="/var/log/httpsrv" />
+	<property name="LOG_HOME" value="<%= log_path %>" />
 	<property name="ROOT_LEVEL" value="ERROR" />
 	<property name="HS_LEVEL" value="INFO" />
 
