fix urls to wallet

--- a/pokermahjong/templates/default/facebook_staging/httpserver/wallet.properties.erb
+++ b/pokermahjong/templates/default/facebook_staging/httpserver/wallet.properties.erb
@@ -1,6 +1,6 @@
-wallet.fundTransfer_credit=http://wallet1.localdomain/api/credit
-wallet.fundTransfer_debit=http://wallet1.localdomain/api/debit
-wallet.fundTransfer_get_balance=http://wallet1.localdomain/api/getbalance
+wallet.fundTransfer_credit=http://wallet1.localdomain:8080/api/credit
+wallet.fundTransfer_debit=http://wallet1.localdomain:8080/api/debit
+wallet.fundTransfer_get_balance=http://wallet1.localdomain:8080/api/getbalance
 
 facebook.merch_id=MJSNS_FACEBOOK
 facebook.merch_pwd=9F64B0B7-3417-411F-85F8-ACE65DCC449F
@@ -11,7 +11,7 @@ mobileDevice.merch_pwd=DE14B8BF-5099-4848-A12B-04B5D9C3B12B
 iah.cash.merch_id=IAHGAMES
 iah.cash.merch_pwd=0D3CD138-46FB-4DCC-84F5-7E3EF4DE5D93
 
-iah.cashCheckHost=http://wallet1.localdomain/api
+iah.cashCheckHost=http://wallet1.localdomain:8080/api
 iah.debitContext=/api/ms/debit
 iah.creditContext=/api/ms/credit
 iah.cashCheckContext=/api/ms/getbalance
