--- a/pokermahjong/templates/default/lobby_server_insert.sql.erb
+++ b/pokermahjong/templates/default/lobby_server_insert.sql.erb
@@ -2,18 +2,19 @@ INSERT INTO alex_pmahjong.lobby_server_info
 (SERVER_NAME, NO_OF_CONNECTIONS, INTERNAL_IP, ACTIVE, SOCKET_PORT, AKKA_PORT)
 VALUES
 (
-<%= node[:opsworks][:instance][:hostname] %>,
+'<%= node[:opsworks][:instance][:hostname] %>',
 0
 ,
-<%= node[:network][:interfaces][:eth0][:addresses].detect{|k,v| v[:family] == "inet" }.first %>,
+'<%= node[:network][:interfaces][:eth0][:addresses].detect{|k,v| v[:family] == "inet" }.first %>',
 1,
 443,
-25523);
+25523
+);
 
 INSERT INTO alex_pmahjong.ip_domain_mapping
 (INTERNAL_IP, DOMAIN)
 VALUES
 (
-<%= node[:network][:interfaces][:eth0][:addresses].detect{|k,v| v[:family] == "inet" }.first %> ,
-<%= node[:opsworks][:instance][:public_dns_name] %>
+'<%= node[:network][:interfaces][:eth0][:addresses].detect{|k,v| v[:family] == "inet" }.first %>',
+'<%= node[:opsworks][:instance][:public_dns_name] %>'
 );
