--- a/pokermahjong/templates/default/lobby_server_insert.sql.erb
+++ b/pokermahjong/templates/default/lobby_server_insert.sql.erb
@@ -1,3 +1,7 @@
+DELETE FROM alex_pmahjong.lobby_server_info WHERE 
+SERVER_NAME = '<%= node[:opsworks][:instance][:hostname] %>' AND
+INTERNAL_IP = '<%= node[:network][:interfaces][:eth0][:addresses].detect{|k,v| v[:family] == "inet" }.first %>';
+
 INSERT INTO alex_pmahjong.lobby_server_info
 (SERVER_NAME, NO_OF_CONNECTIONS, INTERNAL_IP, ACTIVE, SOCKET_PORT, AKKA_PORT)
 VALUES
@@ -10,6 +14,9 @@ VALUES
 10010,
 25523
 );
+
+DELETE FROM alex_pmahjong.ip_domain_mapping WHERE
+INTERNAL_IP = '<%= node[:network][:interfaces][:eth0][:addresses].detect{|k,v| v[:family] == "inet" }.first %>';
 
 INSERT INTO alex_pmahjong.ip_domain_mapping
 (INTERNAL_IP, DOMAIN)
