fix URI to wallet

--- a/pokermahjong/templates/default/facebook_staging/httpserver/wallet.properties.erb
+++ b/pokermahjong/templates/default/facebook_staging/httpserver/wallet.properties.erb
@@ -1,6 +1,6 @@
-wallet.fundTransfer_credit=http://wallet1.localdomain:8080/api/credit
-wallet.fundTransfer_debit=http://wallet1.localdomain:8080/api/debit
-wallet.fundTransfer_get_balance=http://wallet1.localdomain:8080/api/getbalance
+wallet.fundTransfer_credit=http://wallet1.localdomain:8080/api/op/credit
+wallet.fundTransfer_debit=http://wallet1.localdomain:8080/api/op/debit
+wallet.fundTransfer_get_balance=http://wallet1.localdomain:8080/api/op/getbalance
 
 facebook.merch_id=MJSNS_FACEBOOK
 facebook.merch_pwd=9F64B0B7-3417-411F-85F8-ACE65DCC449F
