configure license_key and app_name's prefix via JSON

--- a/spiral/templates/default/nrsysmond.cfg.erb
+++ b/spiral/templates/default/nrsysmond.cfg.erb
@@ -13,7 +13,7 @@
 #          required in order for the server monitor to start.
 # Default: none
 #
-license_key=1ed86739394ff68651132cbbb900d0627dcded77
+license_key=<%= node['newrelic']['license_key'] %>
 
 #
 # Option : loglevel
