fixed folder locations

--- a/prometheus-cms/templates/default/cms.erb
+++ b/prometheus-cms/templates/default/cms.erb
@@ -1,5 +1,5 @@
 server {
-root /var/www/html/cms; 
+root /var/www/cms; 
 index index.php index.html index.htm;
 access\_log /var/log/nginx/cms/access.log;
 error\_log /var/log/nginx/cms/error.log;
