--- a/pokermahjong/templates/default/wallet/jdbc.properties.erb
+++ b/pokermahjong/templates/default/wallet/jdbc.properties.erb
@@ -1,5 +1,5 @@
-developer.name=apmahjong
-jdbc.database=alex_pmahjong_wallet
+developer.name=pmahjong
+jdbc.database=pmahjong_wallet
 master.host=<%= Resolv.getaddress(node[:opsworks][:stack][:rds_instances].first[:address]) %>
 slave.host=${master.host}
 jdbc.driver=com.mysql.jdbc.Driver
@@ -7,4 +7,4 @@ jdbc.class.name=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 jdbc.master.url=jdbc:mysql://${master.host}/${jdbc.database}?autoReconnect=true
 jdbc.slave.url=jdbc:mysql://${slave.host}/${jdbc.database}?autoReconnect=true
 jdbc.username=${developer.name}
-jdbc.password=6JXCzG69eLmTvdl3AtbwJuEDEUdgmKBu
+jdbc.password=axk1prrnx2iu7JUnWtjZRMEh2GukGh1wK3zaVelVEyO5T8blgfA3Jg==
