--- a/pokermahjong/templates/default/facebook_staging/servercore/application.properties.erb
+++ b/pokermahjong/templates/default/facebook_staging/servercore/application.properties.erb
@@ -11,8 +11,8 @@ cash.merch_pwd=0a55d231-97ce-4969-88bc-cababff91421
 amq.url=tcp://amq1.localdomain:61616
 
 jdbc.url=jdbc:mysql://<%= Resolv.getaddress(node[:opsworks][:stack][:rds_instances].first[:address]) %>:3306/pmahjong
-jdbc.username=pmahjong
-jdbc.password=knphtansl~wrjiuopo4luagmu*opdob
+jdbc.username=apmahjong
+jdbc.password=aza6osli
 
 bonecp.IdleMaxAgeInSeconds=0
 bonecp.IdleConnectionTestPeriodInSeconds=60
