--- a/prometheus/templates/default/settings.php.erb
+++ b/prometheus/templates/default/settings.php.erb
@@ -5,13 +5,13 @@ $databases = array (
   array (
     'default' => 
     array (
-      'database' => <%= node['cms']['db_name'] %>,
-      'username' => <%= node['cms']['db_user'] %>,
-      'password' => <%= node['cms']['db_pass'] %>,
-      'host' => <%= node['cms']['db_host'] %>,
-      'port' => <%= node['cms']['db_port'] %>,
-      'driver' => <%= node['cms']['db_driver'] %>,
-      'prefix' => <%= node['cms']['db_prefix'] %>,
+      'database' => <%= node['prometheus']['cms_db_name'] %>,
+      'username' => <%= node['prometheus']['cms_db_user'] %>,
+      'password' => <%= node['prometheus']['cms_db_pass'] %>,
+      'host' => <%= node['prometheus']['cms_db_host'] %>,
+      'port' => <%= node['prometheus']['cms_db_port'] %>,
+      'driver' => <%= node['prometheus']['cms_db_driver'] %>,
+      'prefix' => <%= node['prometheus']['cms_db_prefix'] %>,
     ),
   ),
 );
