--- a/pokermahjong/templates/default/facebook_staging/pmbo/application.properties.erb
+++ b/pokermahjong/templates/default/facebook_staging/pmbo/application.properties.erb
@@ -1,14 +1,14 @@
-bo.jdbc.url=jdbc:mysql://<%= Resolv.getaddress(node[:opsworks][:stack][:rds_instances].first[:address]) %>:3306/pmahjong?zeroDateTimeBehavior=convertToNull&noAccessToProcedureBodies=true&autoReconnect=true
-bo.jdbc.username=pmahjong
-bo.jdbc.password=knphtansl~wrjiuopo4luagmu*opdob
+bo.jdbc.url=jdbc:mysql://<%= Resolv.getaddress(node[:opsworks][:stack][:rds_instances].first[:address]) %>:3306/alex_pmahjong?zeroDateTimeBehavior=convertToNull&noAccessToProcedureBodies=true&autoReconnect=true
+bo.jdbc.username=apmahjong
+bo.jdbc.password=aza6osli
 
-report.jdbc.url=jdbc:mysql://<%= Resolv.getaddress(node[:opsworks][:stack][:rds_instances].first[:address]) %>:3306/pmahjong?zeroDateTimeBehavior=convertToNull&noAccessToProcedureBodies=true&autoReconnect=true
-report.jdbc.username=pmahjong
-report.jdbc.password=knphtansl~wrjiuopo4luagmu*opdob
+report.jdbc.url=jdbc:mysql://<%= Resolv.getaddress(node[:opsworks][:stack][:rds_instances].first[:address]) %>:3306/alex_pmahjong?zeroDateTimeBehavior=convertToNull&noAccessToProcedureBodies=true&autoReconnect=true
+report.jdbc.username=apmahjong
+report.jdbc.password=aza6osli
 
 geoip.jdbc.url=jdbc:mysql://<%= Resolv.getaddress(node[:opsworks][:stack][:rds_instances].first[:address]) %>:3306/geoipdb?zeroDateTimeBehavior=convertToNull
-geoip.jdbc.username=pmahjong
-geoip.jdbc.password=knphtansl~wrjiuopo4luagmu*opdob
+geoip.jdbc.username=alex_pmahjong
+geoip.jdbc.password=aza6osli
 
 sql.show=false
 
