--- a/spiral/templates/default/newrelic.yml.erb
+++ b/spiral/templates/default/newrelic.yml.erb
@@ -27,7 +27,7 @@ common: &default_settings
   # For example, to report data to "My Application" and "My Application 2" use this:
   # app_name: My Application;My Application 2
   # This setting is required.
-  app_name: <%= node[:newrelic][:app_name_prefix] %>_<%= node[:opsworks][:instance][:hostname] %> 
+  app_name: <%= node['pokermahjong']['nr_app_name'] %> 
   
   # To enable high security, set this property to true. When in high
   # security mode, the agent will use SSL and obfuscated SQL. Additionally,
