--- a/spiral/templates/default/php5-newrelic.ini.erb
+++ b/spiral/templates/default/php5-newrelic.ini.erb
@@ -110,7 +110,7 @@ newrelic.logfile = "/var/log/newrelic/php_agent.log"
 ;          list is considered the 'primary' application name and must be unique
 ;          for each account / license key.
 ;
-newrelic.appname = "<%= node[:newrelic][:app_name_prefix] %>_<%= node[:opsworks][:instance][:hostname] %>"
+newrelic.appname = "<%= node['pokermahjong']['nr_app_name'] %>"
 
 ;
 ; Beginning with version 3.0 of the agent, the daemon can be automatically
