--- a/prometheus/templates/default/api-nginx.conf.erb
+++ b/prometheus/templates/default/api-nginx.conf.erb
@@ -21,38 +21,36 @@ server {
 	listen 80 default_server;
 	listen [::]:80 default_server ipv6only=on;
 
-	root /srv/http;
+	root /srv/http/api/current/public/;
 	index index.php index.html index.htm;
 
 	# Make site accessible from http://localhost/
 	server_name localhost;
 
-	location / {
-		# First attempt to serve request as file, then
-		# as directory, then fall back to displaying a 404.
-		try_files $uri $uri/ =404;
-		# Uncomment to enable naxsi on this location
-		# include /etc/nginx/naxsi.rules
-	}
+location / {
+    try_files $uri @rewrite;
+}
 
-	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-	#
-	location ~ \.php$ {
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		# NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-	
-		# With php5-cgi alone:
-		#fastcgi_pass 127.0.0.1:9000;
-		# With php5-fpm:
-		fastcgi_pass unix:/run/php5-fpm.sock;
-		fastcgi_index index.php;
-		include fastcgi_params;
-	}
+location @rewrite {
+    rewrite ^ /index.php;
+}
 
-	# deny access to .htaccess files, if Apache's document root
-	# concurs with nginx's one
-	#
-	location ~ /\.ht {
-		deny all;
-	}
+location ~ \.php$ {
+    fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    include fastcgi_params;
+    fastcgi_param SCRIPT_FILENAME $request_filename;
+    fastcgi_intercept_errors on;
+    fastcgi_pass unix:/var/run/php5-fpm.sock;
+    fastcgi_index index.php;
+}
+
+location ~ ^/sites/.*/files/styles/ {
+    try_files $uri @rewrite;
+}
+
+location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+    expires max;
+    log_not_found off;
+}
+location ~ /\.ht {deny all;}
 }
