--- a/prometheus/templates/default/cms_settings.php.erb
+++ b/prometheus/templates/default/cms_settings.php.erb
@@ -5,13 +5,13 @@ $databases = array (
   array (
     'default' => 
     array (
-      'database' => "<%= node['prometheus']['cms_db_name'] %>",
-      'username' => "<%= node['prometheus']['cms_db_user'] %>",
-      'password' => "<%= node['prometheus']['cms_db_pass'] %>",
-      'host' => "<%= node['prometheus']['cms_db_host'] %>",
-      'port' => "<%= node['prometheus']['cms_db_port'] %>",
-      'driver' => "<%= node['prometheus']['cms_db_driver'] %>",
-      'prefix' => "<%= node['prometheus']['cms_db_prefix'] %>",
+      'database' => "<%= node['prometheus']['cms']['db_name'] %>",
+      'username' => "<%= node['prometheus']['cms']['db_user'] %>",
+      'password' => "<%= node['prometheus']['cms']['db_pass'] %>",
+      'host' => "<%= node['prometheus']['cms']['db_host'] %>",
+      'port' => "<%= node['prometheus']['cms']['db_port'] %>",
+      'driver' => "<%= node['prometheus']['cms']['db_driver'] %>",
+      'prefix' => "<%= node['prometheus']['cms']['db_prefix'] %>",
     ),
   ),
 );
