--- a/pokermahjong/templates/default/wallet/cas.properties.erb
+++ b/pokermahjong/templates/default/wallet/cas.properties.erb
@@ -11,4 +11,4 @@ cas.server.url_casino.w88uat.com=http://casino.w88uat.com/cas
 cas.server.url_casino.bet8uat.com=http://casino.bet8uat.com/cas
 cas.server.url_csnbo.w88.com=https://csnbo.w88.com/cas
 cas.server.url_csnbo.aqzbo.com=https://csnbo.aqzbo.com/cas
-cas.server.url_pmstagingwallet-733975778.ap-southeast-1.elb.amazonaws.com=http://pmstagingcas-1865212088.ap-southeast-1.elb.amazonaws.com/userbo
+cas.server.url_<%= node[:pmahjong][:wallet][:external_fqdn] %>=http://<%= node[:pmahjong][:cas][:external_fqdn] %>/userbo
