--- a/pokermahjong/templates/default/cas/jdbc.properties.erb
+++ b/pokermahjong/templates/default/cas/jdbc.properties.erb
@@ -7,7 +7,7 @@ jdbc.class.name=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 jdbc.master.url=jdbc:mysql://${master.host}/${jdbc.database}?autoReconnect=true
 jdbc.slave.url=jdbc:mysql://${slave.host}/${jdbc.database}?autoReconnect=true
 jdbc.username=${developer.name}
-jdbc.password=mGpZWZx1+ZYFtoTx5l/9bRo+yazqv7Yg
+jdbc.password=<%= node[:pmahjong][:cas][:db_master_pass] %>
 
 dbcp.maximumPoolSize=10
 
