--- a/pokermahjong/templates/default/facebook_staging/httpserver/application.properties.erb
+++ b/pokermahjong/templates/default/facebook_staging/httpserver/application.properties.erb
@@ -4,9 +4,9 @@ master.jdbc.username=<%= node[:database][:master][:user] %>
 master.jdbc.password=<%= node[:database][:master][:pass] %>
 
 slave.jdbc.driverClass=com.mysql.jdbc.Driver
-slave.jdbc.url=jdbc:mysql://<%= node[:database][:slave][:host] %>:3306/pmahjong
-slave.jdbc.username=<%= node[:database][:slave][:user] %>
-slave.jdbc.password=<%= node[:database][:slave][:pass] %>
+slave.jdbc.url=jdbc:mysql://<%= node[:database][:master][:host] %>:3306/pmahjong
+slave.jdbc.username=<%= node[:database][:master][:user] %>
+slave.jdbc.password=<%= node[:database][:master][:pass] %>
 
 bonecp.IdleMaxAgeInSeconds=0
 bonecp.IdleConnectionTestPeriodInSeconds=60
