--- a/pokermahjong/templates/default/facebook_staging/pmbo/application.properties.erb
+++ b/pokermahjong/templates/default/facebook_staging/pmbo/application.properties.erb
@@ -2,9 +2,9 @@ bo.jdbc.url=jdbc:mysql://<%= node[:database][:master][:host] %>:3306/pmahjong?ze
 bo.jdbc.username=<%= node[:database][:master][:user] %>
 bo.jdbc.password=<%= node[:database][:master][:pass] %>
 
-report.jdbc.url=jdbc:mysql://<%= node[:database][:slave][:host] %>:3306/alex_pmahjong?zeroDateTimeBehavior=convertToNull&noAccessToProcedureBodies=true&autoReconnect=true
-report.jdbc.username=<%= node[:database][:slave][:user] %>
-report.jdbc.password=<%= node[:database][:slave][:pass] %>
+report.jdbc.url=jdbc:mysql://<%= node[:database][:master][:host] %>:3306/alex_pmahjong?zeroDateTimeBehavior=convertToNull&noAccessToProcedureBodies=true&autoReconnect=true
+report.jdbc.username=<%= node[:database][:master][:user] %>
+report.jdbc.password=<%= node[:database][:master][:pass] %>
 
 geoip.jdbc.url=jdbc:mysql://<% node[:database][:master][:host] %>:3306/geoipdb?zeroDateTimeBehavior=convertToNull
 geoip.jdbc.username=<%= node[:database][:master][:user] %>
