--- a/pokermahjong/templates/default/facebook_staging/pmbo/application.properties.erb
+++ b/pokermahjong/templates/default/facebook_staging/pmbo/application.properties.erb
@@ -6,7 +6,7 @@ report.jdbc.url=jdbc:mysql://<%= node[:database][:master][:host] %>:3306/alex_pm
 report.jdbc.username=<%= node[:database][:master][:user] %>
 report.jdbc.password=<%= node[:database][:master][:pass] %>
 
-geoip.jdbc.url=jdbc:mysql://<% node[:database][:master][:host] %>:3306/geoipdb?zeroDateTimeBehavior=convertToNull
+geoip.jdbc.url=jdbc:mysql://<%= node[:database][:master][:host] %>:3306/geoipdb?zeroDateTimeBehavior=convertToNull
 geoip.jdbc.username=<%= node[:database][:master][:user] %>
 geoip.jdbc.password=<%= node[:database][:master][:pass] %>
 
