--- a/pokermahjong/templates/default/facebook_staging/servercore/application.properties.erb
+++ b/pokermahjong/templates/default/facebook_staging/servercore/application.properties.erb
@@ -10,7 +10,7 @@ cash.merch_pwd=0a55d231-97ce-4969-88bc-cababff91421
 
 amq.url=failover:(tcp://amq1.localdomain:61616,tcp://amq2.localdomain:61616)?randomize=false&jms.useAsyncSend=true
 
-jdbc.url=jdbc:mysql://<%= node[:database][:master] %>:3306/pmahjong
+jdbc.url=jdbc:mysql://<%= node[:database][:master][:host] %>:3306/pmahjong
 jdbc.username=<%= node[:database][:master][:user] %>
 jdbc.password=<%= node[:database][:master][:pass] %>
 
