use attribute for server_names

--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -21,7 +21,7 @@ server {
     location ~ ^/sites/.*/private/ {return 403;}
     location ~ (^|/)\. {return 403;}
 
-    server_name cms.marvin;
+    server_name <%= node[:prometheus][:web][:fqdn] %>;
 
     location / {        
         try_files $uri @rewrite;
