--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -27,7 +27,7 @@ server {
 	index index.php index.html index.htm;
 
 	# Make site accessible from http://localhost/
-	server_name localhost;
+	server_name <%= node[:prometheus][:web][:fqdn] %>;
 
 	location / {
 		try_files $uri @rewrite;
