update env files using John's input

--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -1,11 +1,11 @@
-OPERATOR_ID=1
-CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
-MS_ENDPOINT=http://<%= node[:prometheus][:api][:fqdn] %>/api/v1
-
-MS_ENDPOINT_MEMBERINFO=/members/getmemberinfo
-CMS_ENDPOINT_GAMELIST=api/games
-CMS_ENDPOINT_BANNERS=api/banners
-CMS_ENDPOINT_LOGO=api/logo
-
+APP_ENV=local
+APP_DEBUG=true
+PROMETHEUS_API_SERVER_MASTER_1=<%= node[:prometheus][:api][:fqdn] %>
 
 C_TOKEN_NAME=pt_token
+
+BO_ENDPOINT=http://ws.aqzbouat.com/
+BO_MEMBER_WS=memberWS.asmx?WSDL
+
+BO_PAYMENT_ENDPOINT=http://paymentservices.aqzbouat.com/
+BO_PAYMENT_MEMBER=Member.svc?wsdl
