--- a/prometheus/templates/default/api-nginx.conf.erb
+++ b/prometheus/templates/default/api-nginx.conf.erb
@@ -1,22 +1,3 @@
-# You may add here your
-# server {
-#	...
-# }
-# statements for each of your virtual hosts to this file
-
-##
-# You should look at the following URL's in order to grasp a solid understanding
-# of Nginx configuration files in order to fully unleash the power of Nginx.
-# http://wiki.nginx.org/Pitfalls
-# http://wiki.nginx.org/QuickStart
-# http://wiki.nginx.org/Configuration
-#
-# Generally, you will want to move this file somewhere, and start with a clean
-# file but keep this around for reference. Or just disable in sites-enabled.
-#
-# Please see /usr/share/doc/nginx-doc/examples/ for more detailed examples.
-##
-
 server {
 	listen 80;
 
@@ -26,34 +7,21 @@ server {
 	access_log /var/log/nginx/api_access.log;
         error_log /var/log/nginx/api_error.log;
 
-	# Make site accessible from http://localhost/
 	server_name <%= node[:prometheus][:api][:fqdn] %>; 
 
 	location / {
-		try_files $uri @rewrite;
 		include /etc/nginx/cors.conf;
-	}
-
-	location @rewrite {
 		rewrite ^ /index.php;
 	}
 
 	location ~ \.php$ {
+		include /etc/nginx/cors.conf;
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		include fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME $request_filename;
 		fastcgi_intercept_errors on;
 		fastcgi_pass unix:/var/run/php5-fpm.sock;
 		fastcgi_index index.php;
-	}
-
-	location ~ ^/sites/.*/files/styles/ {
-		try_files $uri @rewrite;
-	}
-
-	location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-		expires max;
-		log_not_found off;
 	}
 
 	location ~ /\.ht {
