--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -37,8 +37,8 @@ server {
 		fastcgi_index index.php;
 	}
 
-	location ~ ^/sites/.*/files/styles/ {
-		try_files $uri @rewrite;
+	location /sites/.*/files/styles {
+		alias /srv/http/cms/current/sites/default/files/styles;
 	}
 
 	location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
