--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -40,6 +40,7 @@ server {
         }
  
         location / {
+		include /etc/nginx/cors.conf;
                 # This is cool because no php is touched for static content
                 try_files $uri @rewrite;
         }
