enable cors for phpfpm as well

--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -57,6 +57,7 @@ server {
         }
  
         location ~ \.php$ {
+		include /etc/nginx/cors.conf;
                 fastcgi_split_path_info ^(.+\.php)(/.+)$;
                 #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
                 include fastcgi_params;
