update .env file and make BO stuff dynamic

--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -1,11 +1,15 @@
 APP_ENV=local
 APP_DEBUG=true
+APP_KEY=SomeRandomString
+
 PROMETHEUS_API_SERVER_MASTER_1=<%= node[:prometheus][:api][:fqdn] %>
 
+C_TOKEN_EXPIRY=240
 C_TOKEN_NAME=pt_token
 
-BO_ENDPOINT=http://ws.aqzbouat.com/
+BO_ENDPOINT=<%= node[:prometheus][:api][:bo_endpoint] %>/
 BO_MEMBER_WS=memberWS.asmx?WSDL
 
-BO_PAYMENT_ENDPOINT=http://paymentservices.aqzbouat.com/
+BO_PAYMENT_ENDPOINT=<%= node[:prometheus][:api][:bo_payment_endpoint] %>/
 BO_PAYMENT_MEMBER=Member.svc?wsdl
+BO_PAYMENT_SYSTEM=MS1.svc?wsdl
