use 24hrs as expiry for static content

--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -75,7 +75,7 @@ server {
         }
  
         location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-                expires max;
+                expires 24h;
                 log_not_found off;
         }
 }
