--- a/prometheus/templates/default/cms_settings.php.erb
+++ b/prometheus/templates/default/cms_settings.php.erb
@@ -38,5 +38,19 @@ $conf['cache_default_class'] = 'MemCacheDrupal';
 # The 'cache_form' bin must be assigned to non-volatile storage.
 $conf['cache_class_cache_form'] = 'DrupalDatabaseCache';
 
+# (Optional) Don't bootstrap the database when serving pages from the cache.
+$conf['page_cache_without_database'] = TRUE;
+$conf['page_cache_invoke_hooks'] = FALSE;
+
+$conf['memcache_servers'] = array(
+ '127.0.0.1:11211' => 'default'
+);
+
+$conf['memcache_bins'] = array(
+ 'cache' => 'default',
+ 'cache_filter' => 'default',
+ 'cache_menu' => 'default'
+);
+
 include DRUPAL_ROOT . '/sites/all/modules/contrib/domain/settings.inc';
 
