--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -13,6 +13,7 @@ BO_MEMBER_WS=memberWS.asmx?WSDL
 BO_PAYMENT_ENDPOINT=<%= node[:prometheus][:api][:bo_payment_endpoint] %>/
 BO_PAYMENT_MEMBER=Member.svc?wsdl
 BO_PAYMENT_SYSTEM=MS1.svc?wsdl
+BO_PAYMENT_DEPOSIT=Deposit.svc?wsdl
 
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
 MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
