update frontend's .env file with John and Joseph's input

--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -1,9 +1,18 @@
 OPERATOR_ID=1
 CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
 MS_ENDPOINT=http://<%= node[:prometheus][:api][:fqdn] %>/api/v1
-MS_ENDPOINT_MEMBERINFO=/members/getinfo
-CMS_ENDPOINT_GAMELIST=api/games
-CMS_ENDPOINT_BANNERS=api/banners
-CMS_ENDPOINT_LOGO=api/logo
-C_TOKEN_NAME=pt_token
 
+MS_ENDPOINT_MEMBERINFO=/members/getinfo
+
+CMS_ENDPOINT_BANNERS=/banners
+CMS_ENDPOINT_LOGO=/logo
+CMS_ENDPOINT_GAMEITEM=/game_item
+CMS_ENDPOINT_THEMES=/themes
+CMS_ENDPOINT_CONTACTS=/contacts
+CMS_ENDPOINT_PROMOCONTENT=/promo_content
+
+C_TOKEN_NAME=pt_token
+CMS_API_VERSION=v1
+CMS_API_LBL=api
+CMS_OPT=operator
+OPERATOR_ID=1
